--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
       <div class="ad-card ms-4">
         <div>
-          <img src="https://images.olx.com.pk/thumbnails/473221350-800x600.webp" alt="">
+          <img src="https://th.bing.com/th/id/OIP.AF_r4l__ov_lizW3sFwnkAHaGW?rs=1&pid=ImgDetMain" alt="">
         </div>
         <div>
           <p class="pricing">
